parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    BITWISE_NOT
    BITWISE_XOR
    CHARACTER
    COMMENT
    DIVIDE_ASSIGN
    ELLIPSIS
    FLOAT
    LET16
    LET8
    LOGICAL_AND
    LOGICAL_OR
    MEMBER_ACCESS
    MINUS_ASSIGN
    MODULO_ASSIGN
    NEWLINE
    PLUS_ASSIGN
    STRUCT
    TERNARY_ELSE
    TERNARY_IF
    TIMES_ASSIGN

Grammar

Rule 0     S' -> code
Rule 1     code -> function
Rule 2     code -> struct
Rule 3     code -> code code
Rule 4     struct -> DEF NAME LBRACE NAME RBRACE
Rule 5     struct -> DEF NAME LBRACE name_list RBRACE
Rule 6     functions -> function function
Rule 7     functions -> functions function
Rule 8     struct -> DEF NAME LBRACE NAME RBRACE LPAREN functions RPAREN
Rule 9     struct -> DEF NAME LBRACE name_list RBRACE LPAREN functions RPAREN
Rule 10    struct -> DEF NAME LBRACE NAME RBRACE LPAREN function RPAREN
Rule 11    struct -> DEF NAME LBRACE name_list RBRACE LPAREN function RPAREN
Rule 12    function -> DEF NAME LPAREN RPAREN statementc
Rule 13    function -> DEF NAME LPAREN RPAREN statement
Rule 14    function -> DEF NAME LPAREN argument RPAREN statementc
Rule 15    function -> DEF NAME LPAREN argument RPAREN statement
Rule 16    function -> DEF NAME LPAREN arg_list RPAREN statementc
Rule 17    function -> DEF NAME LPAREN arg_list RPAREN statement
Rule 18    name_list -> NAME COMMA NAME
Rule 19    name_list -> NAME COMMA name_list
Rule 20    arg_list -> argument COMMA argument
Rule 21    arg_list -> argument COMMA arg_list
Rule 22    statements -> statement statements
Rule 23    statements -> statement statement
Rule 24    statementc -> LBRACE statement RBRACE
Rule 25    statementc -> LBRACE statements RBRACE
Rule 26    statement -> NAME AS NAME SEMICOLON
Rule 27    statement -> LET NAME ASSIGN expression SEMICOLON
Rule 28    statement -> NAME NAME ASSIGN expression SEMICOLON
Rule 29    statement -> NAME NAME SEMICOLON
Rule 30    statement -> LET NAME SEMICOLON
Rule 31    statement -> NAME ASSIGN expression SEMICOLON
Rule 32    statement -> NAME DOT NAME ASSIGN expression SEMICOLON
Rule 33    statement -> expression LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
Rule 34    statement -> expression LBRACKET I8 COLON expression RBRACKET ASSIGN expression SEMICOLON
Rule 35    statement -> RETURN expression SEMICOLON
Rule 36    statement -> NAME LPAREN expression_list RPAREN SEMICOLON
Rule 37    statement -> NAME LPAREN expression RPAREN SEMICOLON
Rule 38    statement -> NAME LPAREN RPAREN SEMICOLON
Rule 39    statement -> NAME DOT NAME LPAREN expression RPAREN SEMICOLON
Rule 40    statement -> NAME DOT NAME LPAREN expression_list RPAREN SEMICOLON
Rule 41    statement -> NAME DOT NAME LPAREN RPAREN SEMICOLON
Rule 42    statement -> IF LPAREN expression RPAREN statementc
Rule 43    statement -> IF LPAREN expression RPAREN statement
Rule 44    statement -> IF LPAREN expression RPAREN statementc ELSE statementc
Rule 45    statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 46    statement -> IF LPAREN expression RPAREN statementc ELSE statement
Rule 47    statement -> IF LPAREN expression RPAREN statement ELSE statementc
Rule 48    statement -> FOR LPAREN statement expression SEMICOLON statement RPAREN statementc
Rule 49    statement -> FOR LPAREN statement expression SEMICOLON statement RPAREN statement
Rule 50    statement -> WHILE LPAREN expression RPAREN statementc
Rule 51    statement -> WHILE LPAREN expression RPAREN statement
Rule 52    statement -> BREAK SEMICOLON
Rule 53    argument -> NAME
Rule 54    argument -> NAME COLON NAME
Rule 55    expression_list -> expression COMMA expression_list
Rule 56    expression_list -> expression COMMA expression
Rule 57    expression -> NAME DOT NAME
Rule 58    expression -> NAME DOT NAME LPAREN expression RPAREN
Rule 59    expression -> NAME DOT NAME LPAREN expression_list RPAREN
Rule 60    expression -> NAME DOT NAME LPAREN RPAREN
Rule 61    expression -> LBRACE expression RBRACE
Rule 62    expression -> LBRACE expression_list RBRACE
Rule 63    expression -> expression LBRACKET expression RBRACKET
Rule 64    expression -> expression LBRACKET I8 COLON expression RBRACKET
Rule 65    expression -> INTEGER
Rule 66    expression -> NAME
Rule 67    expression -> STRING
Rule 68    expression -> STRING_LIT
Rule 69    expression -> expression ADD expression
Rule 70    expression -> expression SUB expression
Rule 71    expression -> expression MUL expression
Rule 72    expression -> expression DIV expression
Rule 73    expression -> expression EQUAL expression
Rule 74    expression -> expression NOT_EQUAL expression
Rule 75    expression -> expression GREATER_THAN_EQUAL expression
Rule 76    expression -> expression LESS_THAN_EQUAL expression
Rule 77    expression -> expression GREATER_THAN expression
Rule 78    expression -> expression LESS_THAN expression
Rule 79    expression -> expression LEFT_SHIFT expression
Rule 80    expression -> expression RIGHT_SHIFT expression
Rule 81    expression -> expression BITWISE_OR expression
Rule 82    expression -> expression BITWISE_AND expression
Rule 83    expression -> expression AND expression
Rule 84    expression -> expression OR expression
Rule 85    statement -> NAME DPLUS SEMICOLON
Rule 86    statement -> NAME DMINUS SEMICOLON
Rule 87    statement -> DPLUS NAME SEMICOLON
Rule 88    statement -> DMINUS NAME SEMICOLON
Rule 89    expression -> NAME DPLUS
Rule 90    expression -> NAME DMINUS
Rule 91    expression -> DPLUS NAME
Rule 92    expression -> DMINUS NAME
Rule 93    expression -> NAME LPAREN expression_list RPAREN
Rule 94    expression -> NAME LPAREN expression RPAREN
Rule 95    expression -> NAME LPAREN RPAREN
Rule 96    expression -> LPAREN expression RPAREN
Rule 97    expression -> FALSE
Rule 98    expression -> NULL
Rule 99    expression -> TRUE
Rule 100   expression -> LOGICAL_NOT expression
Rule 101   expression -> SUB expression

Terminals, with rules where they appear

ADD                  : 69
AND                  : 83
ARROW                : 
AS                   : 26
ASSIGN               : 27 28 31 32 33 34
BITWISE_AND          : 82
BITWISE_NOT          : 
BITWISE_OR           : 81
BITWISE_XOR          : 
BREAK                : 52
CHARACTER            : 
COLON                : 34 54 64
COMMA                : 18 19 20 21 55 56
COMMENT              : 
DEF                  : 4 5 8 9 10 11 12 13 14 15 16 17
DIV                  : 72
DIVIDE_ASSIGN        : 
DMINUS               : 86 88 90 92
DOT                  : 32 39 40 41 57 58 59 60
DPLUS                : 85 87 89 91
ELLIPSIS             : 
ELSE                 : 44 45 46 47
EQUAL                : 73
FALSE                : 97
FLOAT                : 
FOR                  : 48 49
GREATER_THAN         : 77
GREATER_THAN_EQUAL   : 75
I8                   : 34 64
IF                   : 42 43 44 45 46 47
INTEGER              : 65
LBRACE               : 4 5 8 9 10 11 24 25 61 62
LBRACKET             : 33 34 63 64
LEFT_SHIFT           : 79
LESS_THAN            : 78
LESS_THAN_EQUAL      : 76
LET                  : 27 30
LET16                : 
LET8                 : 
LOGICAL_AND          : 
LOGICAL_NOT          : 100
LOGICAL_OR           : 
LPAREN               : 8 9 10 11 12 13 14 15 16 17 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 58 59 60 93 94 95 96
MEMBER_ACCESS        : 
MINUS_ASSIGN         : 
MODULO_ASSIGN        : 
MUL                  : 71
NAME                 : 4 4 5 8 8 9 10 10 11 12 13 14 15 16 17 18 18 19 26 26 27 28 28 29 29 30 31 32 32 36 37 38 39 39 40 40 41 41 53 54 54 57 57 58 58 59 59 60 60 66 85 86 87 88 89 90 91 92 93 94 95
NEWLINE              : 
NOT_EQUAL            : 74
NULL                 : 98
OR                   : 84
PLUS_ASSIGN          : 
RBRACE               : 4 5 8 9 10 11 24 25 61 62
RBRACKET             : 33 34 63 64
RETURN               : 35
RIGHT_SHIFT          : 80
RPAREN               : 8 9 10 11 12 13 14 15 16 17 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 58 59 60 93 94 95 96
SEMICOLON            : 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 48 49 52 85 86 87 88
STRING               : 67
STRING_LIT           : 68
STRUCT               : 
SUB                  : 70 101
TERNARY_ELSE         : 
TERNARY_IF           : 
TIMES_ASSIGN         : 
TRUE                 : 99
WHILE                : 50 51
error                : 

Nonterminals, with rules where they appear

arg_list             : 16 17 21
argument             : 14 15 20 20 21
code                 : 3 3 0
expression           : 27 28 31 32 33 33 33 34 34 34 35 37 39 42 43 44 45 46 47 48 49 50 51 55 56 56 58 61 63 63 64 64 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 94 96 100 101
expression_list      : 36 40 55 59 62 93
function             : 1 6 6 7 10 11
functions            : 7 8 9
name_list            : 5 9 11 19
statement            : 13 15 17 22 23 23 24 43 45 45 46 47 48 48 49 49 49 51
statementc           : 12 14 16 42 44 44 46 47 48 50
statements           : 22 25
struct               : 2

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . function
    (2) code -> . struct
    (3) code -> . code code
    (12) function -> . DEF NAME LPAREN RPAREN statementc
    (13) function -> . DEF NAME LPAREN RPAREN statement
    (14) function -> . DEF NAME LPAREN argument RPAREN statementc
    (15) function -> . DEF NAME LPAREN argument RPAREN statement
    (16) function -> . DEF NAME LPAREN arg_list RPAREN statementc
    (17) function -> . DEF NAME LPAREN arg_list RPAREN statement
    (4) struct -> . DEF NAME LBRACE NAME RBRACE
    (5) struct -> . DEF NAME LBRACE name_list RBRACE
    (8) struct -> . DEF NAME LBRACE NAME RBRACE LPAREN functions RPAREN
    (9) struct -> . DEF NAME LBRACE name_list RBRACE LPAREN functions RPAREN
    (10) struct -> . DEF NAME LBRACE NAME RBRACE LPAREN function RPAREN
    (11) struct -> . DEF NAME LBRACE name_list RBRACE LPAREN function RPAREN

    DEF             shift and go to state 4

    code                           shift and go to state 1
    function                       shift and go to state 2
    struct                         shift and go to state 3

state 1

    (0) S' -> code .
    (3) code -> code . code
    (1) code -> . function
    (2) code -> . struct
    (3) code -> . code code
    (12) function -> . DEF NAME LPAREN RPAREN statementc
    (13) function -> . DEF NAME LPAREN RPAREN statement
    (14) function -> . DEF NAME LPAREN argument RPAREN statementc
    (15) function -> . DEF NAME LPAREN argument RPAREN statement
    (16) function -> . DEF NAME LPAREN arg_list RPAREN statementc
    (17) function -> . DEF NAME LPAREN arg_list RPAREN statement
    (4) struct -> . DEF NAME LBRACE NAME RBRACE
    (5) struct -> . DEF NAME LBRACE name_list RBRACE
    (8) struct -> . DEF NAME LBRACE NAME RBRACE LPAREN functions RPAREN
    (9) struct -> . DEF NAME LBRACE name_list RBRACE LPAREN functions RPAREN
    (10) struct -> . DEF NAME LBRACE NAME RBRACE LPAREN function RPAREN
    (11) struct -> . DEF NAME LBRACE name_list RBRACE LPAREN function RPAREN

    DEF             shift and go to state 4

    code                           shift and go to state 5
    function                       shift and go to state 2
    struct                         shift and go to state 3

state 2

    (1) code -> function .

    DEF             reduce using rule 1 (code -> function .)
    $end            reduce using rule 1 (code -> function .)


state 3

    (2) code -> struct .

    DEF             reduce using rule 2 (code -> struct .)
    $end            reduce using rule 2 (code -> struct .)


state 4

    (12) function -> DEF . NAME LPAREN RPAREN statementc
    (13) function -> DEF . NAME LPAREN RPAREN statement
    (14) function -> DEF . NAME LPAREN argument RPAREN statementc
    (15) function -> DEF . NAME LPAREN argument RPAREN statement
    (16) function -> DEF . NAME LPAREN arg_list RPAREN statementc
    (17) function -> DEF . NAME LPAREN arg_list RPAREN statement
    (4) struct -> DEF . NAME LBRACE NAME RBRACE
    (5) struct -> DEF . NAME LBRACE name_list RBRACE
    (8) struct -> DEF . NAME LBRACE NAME RBRACE LPAREN functions RPAREN
    (9) struct -> DEF . NAME LBRACE name_list RBRACE LPAREN functions RPAREN
    (10) struct -> DEF . NAME LBRACE NAME RBRACE LPAREN function RPAREN
    (11) struct -> DEF . NAME LBRACE name_list RBRACE LPAREN function RPAREN

    NAME            shift and go to state 6


state 5

    (3) code -> code code .
    (3) code -> code . code
    (1) code -> . function
    (2) code -> . struct
    (3) code -> . code code
    (12) function -> . DEF NAME LPAREN RPAREN statementc
    (13) function -> . DEF NAME LPAREN RPAREN statement
    (14) function -> . DEF NAME LPAREN argument RPAREN statementc
    (15) function -> . DEF NAME LPAREN argument RPAREN statement
    (16) function -> . DEF NAME LPAREN arg_list RPAREN statementc
    (17) function -> . DEF NAME LPAREN arg_list RPAREN statement
    (4) struct -> . DEF NAME LBRACE NAME RBRACE
    (5) struct -> . DEF NAME LBRACE name_list RBRACE
    (8) struct -> . DEF NAME LBRACE NAME RBRACE LPAREN functions RPAREN
    (9) struct -> . DEF NAME LBRACE name_list RBRACE LPAREN functions RPAREN
    (10) struct -> . DEF NAME LBRACE NAME RBRACE LPAREN function RPAREN
    (11) struct -> . DEF NAME LBRACE name_list RBRACE LPAREN function RPAREN

  ! shift/reduce conflict for DEF resolved as shift
    $end            reduce using rule 3 (code -> code code .)
    DEF             shift and go to state 4

  ! DEF             [ reduce using rule 3 (code -> code code .) ]

    code                           shift and go to state 5
    function                       shift and go to state 2
    struct                         shift and go to state 3

state 6

    (12) function -> DEF NAME . LPAREN RPAREN statementc
    (13) function -> DEF NAME . LPAREN RPAREN statement
    (14) function -> DEF NAME . LPAREN argument RPAREN statementc
    (15) function -> DEF NAME . LPAREN argument RPAREN statement
    (16) function -> DEF NAME . LPAREN arg_list RPAREN statementc
    (17) function -> DEF NAME . LPAREN arg_list RPAREN statement
    (4) struct -> DEF NAME . LBRACE NAME RBRACE
    (5) struct -> DEF NAME . LBRACE name_list RBRACE
    (8) struct -> DEF NAME . LBRACE NAME RBRACE LPAREN functions RPAREN
    (9) struct -> DEF NAME . LBRACE name_list RBRACE LPAREN functions RPAREN
    (10) struct -> DEF NAME . LBRACE NAME RBRACE LPAREN function RPAREN
    (11) struct -> DEF NAME . LBRACE name_list RBRACE LPAREN function RPAREN

    LPAREN          shift and go to state 7
    LBRACE          shift and go to state 8


state 7

    (12) function -> DEF NAME LPAREN . RPAREN statementc
    (13) function -> DEF NAME LPAREN . RPAREN statement
    (14) function -> DEF NAME LPAREN . argument RPAREN statementc
    (15) function -> DEF NAME LPAREN . argument RPAREN statement
    (16) function -> DEF NAME LPAREN . arg_list RPAREN statementc
    (17) function -> DEF NAME LPAREN . arg_list RPAREN statement
    (53) argument -> . NAME
    (54) argument -> . NAME COLON NAME
    (20) arg_list -> . argument COMMA argument
    (21) arg_list -> . argument COMMA arg_list

    RPAREN          shift and go to state 10
    NAME            shift and go to state 9

    argument                       shift and go to state 11
    arg_list                       shift and go to state 12

state 8

    (4) struct -> DEF NAME LBRACE . NAME RBRACE
    (5) struct -> DEF NAME LBRACE . name_list RBRACE
    (8) struct -> DEF NAME LBRACE . NAME RBRACE LPAREN functions RPAREN
    (9) struct -> DEF NAME LBRACE . name_list RBRACE LPAREN functions RPAREN
    (10) struct -> DEF NAME LBRACE . NAME RBRACE LPAREN function RPAREN
    (11) struct -> DEF NAME LBRACE . name_list RBRACE LPAREN function RPAREN
    (18) name_list -> . NAME COMMA NAME
    (19) name_list -> . NAME COMMA name_list

    NAME            shift and go to state 13

    name_list                      shift and go to state 14

state 9

    (53) argument -> NAME .
    (54) argument -> NAME . COLON NAME

    RPAREN          reduce using rule 53 (argument -> NAME .)
    COMMA           reduce using rule 53 (argument -> NAME .)
    COLON           shift and go to state 15


state 10

    (12) function -> DEF NAME LPAREN RPAREN . statementc
    (13) function -> DEF NAME LPAREN RPAREN . statement
    (24) statementc -> . LBRACE statement RBRACE
    (25) statementc -> . LBRACE statements RBRACE
    (26) statement -> . NAME AS NAME SEMICOLON
    (27) statement -> . LET NAME ASSIGN expression SEMICOLON
    (28) statement -> . NAME NAME ASSIGN expression SEMICOLON
    (29) statement -> . NAME NAME SEMICOLON
    (30) statement -> . LET NAME SEMICOLON
    (31) statement -> . NAME ASSIGN expression SEMICOLON
    (32) statement -> . NAME DOT NAME ASSIGN expression SEMICOLON
    (33) statement -> . expression LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (34) statement -> . expression LBRACKET I8 COLON expression RBRACKET ASSIGN expression SEMICOLON
    (35) statement -> . RETURN expression SEMICOLON
    (36) statement -> . NAME LPAREN expression_list RPAREN SEMICOLON
    (37) statement -> . NAME LPAREN expression RPAREN SEMICOLON
    (38) statement -> . NAME LPAREN RPAREN SEMICOLON
    (39) statement -> . NAME DOT NAME LPAREN expression RPAREN SEMICOLON
    (40) statement -> . NAME DOT NAME LPAREN expression_list RPAREN SEMICOLON
    (41) statement -> . NAME DOT NAME LPAREN RPAREN SEMICOLON
    (42) statement -> . IF LPAREN expression RPAREN statementc
    (43) statement -> . IF LPAREN expression RPAREN statement
    (44) statement -> . IF LPAREN expression RPAREN statementc ELSE statementc
    (45) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (46) statement -> . IF LPAREN expression RPAREN statementc ELSE statement
    (47) statement -> . IF LPAREN expression RPAREN statement ELSE statementc
    (48) statement -> . FOR LPAREN statement expression SEMICOLON statement RPAREN statementc
    (49) statement -> . FOR LPAREN statement expression SEMICOLON statement RPAREN statement
    (50) statement -> . WHILE LPAREN expression RPAREN statementc
    (51) statement -> . WHILE LPAREN expression RPAREN statement
    (52) statement -> . BREAK SEMICOLON
    (85) statement -> . NAME DPLUS SEMICOLON
    (86) statement -> . NAME DMINUS SEMICOLON
    (87) statement -> . DPLUS NAME SEMICOLON
    (88) statement -> . DMINUS NAME SEMICOLON
    (57) expression -> . NAME DOT NAME
    (58) expression -> . NAME DOT NAME LPAREN expression RPAREN
    (59) expression -> . NAME DOT NAME LPAREN expression_list RPAREN
    (60) expression -> . NAME DOT NAME LPAREN RPAREN
    (61) expression -> . LBRACE expression RBRACE
    (62) expression -> . LBRACE expression_list RBRACE
    (63) expression -> . expression LBRACKET expression RBRACKET
    (64) expression -> . expression LBRACKET I8 COLON expression RBRACKET
    (65) expression -> . INTEGER
    (66) expression -> . NAME
    (67) expression -> . STRING
    (68) expression -> . STRING_LIT
    (69) expression -> . expression ADD expression
    (70) expression -> . expression SUB expression
    (71) expression -> . expression MUL expression
    (72) expression -> . expression DIV expression
    (73) expression -> . expression EQUAL expression
    (74) expression -> . expression NOT_EQUAL expression
    (75) expression -> . expression GREATER_THAN_EQUAL expression
    (76) expression -> . expression LESS_THAN_EQUAL expression
    (77) expression -> . expression GREATER_THAN expression
    (78) expression -> . expression LESS_THAN expression
    (79) expression -> . expression LEFT_SHIFT expression
    (80) expression -> . expression RIGHT_SHIFT expression
    (81) expression -> . expression BITWISE_OR expression
    (82) expression -> . expression BITWISE_AND expression
    (83) expression -> . expression AND expression
    (84) expression -> . expression OR expression
    (89) expression -> . NAME DPLUS
    (90) expression -> . NAME DMINUS
    (91) expression -> . DPLUS NAME
    (92) expression -> . DMINUS NAME
    (93) expression -> . NAME LPAREN expression_list RPAREN
    (94) expression -> . NAME LPAREN expression RPAREN
    (95) expression -> . NAME LPAREN RPAREN
    (96) expression -> . LPAREN expression RPAREN
    (97) expression -> . FALSE
    (98) expression -> . NULL
    (99) expression -> . TRUE
    (100) expression -> . LOGICAL_NOT expression
    (101) expression -> . SUB expression

    LBRACE          shift and go to state 20
    NAME            shift and go to state 16
    LET             shift and go to state 21
    RETURN          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    BREAK           shift and go to state 27
    DPLUS           shift and go to state 28
    DMINUS          shift and go to state 29
    INTEGER         shift and go to state 30
    STRING          shift and go to state 31
    STRING_LIT      shift and go to state 32
    LPAREN          shift and go to state 17
    FALSE           shift and go to state 34
    NULL            shift and go to state 35
    TRUE            shift and go to state 36
    LOGICAL_NOT     shift and go to state 37
    SUB             shift and go to state 33

    statementc                     shift and go to state 18
    statement                      shift and go to state 19
    expression                     shift and go to state 22

state 11

    (14) function -> DEF NAME LPAREN argument . RPAREN statementc
    (15) function -> DEF NAME LPAREN argument . RPAREN statement
    (20) arg_list -> argument . COMMA argument
    (21) arg_list -> argument . COMMA arg_list

    RPAREN          shift and go to state 38
    COMMA           shift and go to state 39


state 12

    (16) function -> DEF NAME LPAREN arg_list . RPAREN statementc
    (17) function -> DEF NAME LPAREN arg_list . RPAREN statement

    RPAREN          shift and go to state 40


state 13

    (4) struct -> DEF NAME LBRACE NAME . RBRACE
    (8) struct -> DEF NAME LBRACE NAME . RBRACE LPAREN functions RPAREN
    (10) struct -> DEF NAME LBRACE NAME . RBRACE LPAREN function RPAREN
    (18) name_list -> NAME . COMMA NAME
    (19) name_list -> NAME . COMMA name_list

    RBRACE          shift and go to state 41
    COMMA           shift and go to state 42


state 14

    (5) struct -> DEF NAME LBRACE name_list . RBRACE
    (9) struct -> DEF NAME LBRACE name_list . RBRACE LPAREN functions RPAREN
    (11) struct -> DEF NAME LBRACE name_list . RBRACE LPAREN function RPAREN

    RBRACE          shift and go to state 43


state 15

    (54) argument -> NAME COLON . NAME

    NAME            shift and go to state 44


state 16

    (26) statement -> NAME . AS NAME SEMICOLON
    (28) statement -> NAME . NAME ASSIGN expression SEMICOLON
    (29) statement -> NAME . NAME SEMICOLON
    (31) statement -> NAME . ASSIGN expression SEMICOLON
    (32) statement -> NAME . DOT NAME ASSIGN expression SEMICOLON
    (36) statement -> NAME . LPAREN expression_list RPAREN SEMICOLON
    (37) statement -> NAME . LPAREN expression RPAREN SEMICOLON
    (38) statement -> NAME . LPAREN RPAREN SEMICOLON
    (39) statement -> NAME . DOT NAME LPAREN expression RPAREN SEMICOLON
    (40) statement -> NAME . DOT NAME LPAREN expression_list RPAREN SEMICOLON
    (41) statement -> NAME . DOT NAME LPAREN RPAREN SEMICOLON
    (85) statement -> NAME . DPLUS SEMICOLON
    (86) statement -> NAME . DMINUS SEMICOLON
    (57) expression -> NAME . DOT NAME
    (58) expression -> NAME . DOT NAME LPAREN expression RPAREN
    (59) expression -> NAME . DOT NAME LPAREN expression_list RPAREN
    (60) expression -> NAME . DOT NAME LPAREN RPAREN
    (66) expression -> NAME .
    (89) expression -> NAME . DPLUS
    (90) expression -> NAME . DMINUS
    (93) expression -> NAME . LPAREN expression_list RPAREN
    (94) expression -> NAME . LPAREN expression RPAREN
    (95) expression -> NAME . LPAREN RPAREN

    AS              shift and go to state 46
    NAME            shift and go to state 45
    ASSIGN          shift and go to state 47
    DOT             shift and go to state 48
    LPAREN          shift and go to state 49
    DPLUS           shift and go to state 50
    DMINUS          shift and go to state 51
    LBRACKET        reduce using rule 66 (expression -> NAME .)
    ADD             reduce using rule 66 (expression -> NAME .)
    SUB             reduce using rule 66 (expression -> NAME .)
    MUL             reduce using rule 66 (expression -> NAME .)
    DIV             reduce using rule 66 (expression -> NAME .)
    EQUAL           reduce using rule 66 (expression -> NAME .)
    NOT_EQUAL       reduce using rule 66 (expression -> NAME .)
    GREATER_THAN_EQUAL reduce using rule 66 (expression -> NAME .)
    LESS_THAN_EQUAL reduce using rule 66 (expression -> NAME .)
    GREATER_THAN    reduce using rule 66 (expression -> NAME .)
    LESS_THAN       reduce using rule 66 (expression -> NAME .)
    LEFT_SHIFT      reduce using rule 66 (expression -> NAME .)
    RIGHT_SHIFT     reduce using rule 66 (expression -> NAME .)
    BITWISE_OR      reduce using rule 66 (expression -> NAME .)
    BITWISE_AND     reduce using rule 66 (expression -> NAME .)
    AND             reduce using rule 66 (expression -> NAME .)
    OR              reduce using rule 66 (expression -> NAME .)
    RBRACE          reduce using rule 66 (expression -> NAME .)
    COMMA           reduce using rule 66 (expression -> NAME .)


state 17

    (96) expression -> LPAREN . expression RPAREN
    (57) expression -> . NAME DOT NAME
    (58) expression -> . NAME DOT NAME LPAREN expression RPAREN
    (59) expression -> . NAME DOT NAME LPAREN expression_list RPAREN
    (60) expression -> . NAME DOT NAME LPAREN RPAREN
    (61) expression -> . LBRACE expression RBRACE
    (62) expression -> . LBRACE expression_list RBRACE
    (63) expression -> . expression LBRACKET expression RBRACKET
    (64) expression -> . expression LBRACKET I8 COLON expression RBRACKET
    (65) expression -> . INTEGER
    (66) expression -> . NAME
    (67) expression -> . STRING
    (68) expression -> . STRING_LIT
    (69) expression -> . expression ADD expression
    (70) expression -> . expression SUB expression
    (71) expression -> . expression MUL expression
    (72) expression -> . expression DIV expression
    (73) expression -> . expression EQUAL expression
    (74) expression -> . expression NOT_EQUAL expression
    (75) expression -> . expression GREATER_THAN_EQUAL expression
    (76) expression -> . expression LESS_THAN_EQUAL expression
    (77) expression -> . expression GREATER_THAN expression
    (78) expression -> . expression LESS_THAN expression
    (79) expression -> . expression LEFT_SHIFT expression
    (80) expression -> . expression RIGHT_SHIFT expression
    (81) expression -> . expression BITWISE_OR expression
    (82) expression -> . expression BITWISE_AND expression
    (83) expression -> . expression AND expression
    (84) expression -> . expression OR expression
    (89) expression -> . NAME DPLUS
    (90) expression -> . NAME DMINUS
    (91) expression -> . DPLUS NAME
    (92) expression -> . DMINUS NAME
    (93) expression -> . NAME LPAREN expression_list RPAREN
    (94) expression -> . NAME LPAREN expression RPAREN
    (95) expression -> . NAME LPAREN RPAREN
    (96) expression -> . LPAREN expression RPAREN
    (97) expression -> . FALSE
    (98) expression -> . NULL
    (99) expression -> . TRUE
    (100) expression -> . LOGICAL_NOT expression
    (101) expression -> . SUB expression

    NAME            shift and go to state 53
    LBRACE          shift and go to state 54
    INTEGER         shift and go to state 30
    STRING          shift and go to state 31
    STRING_LIT      shift and go to state 32
    DPLUS           shift and go to state 55
    DMINUS          shift and go to state 56
    LPAREN          shift and go to state 17
    FALSE           shift and go to state 34
    NULL            shift and go to state 35
    TRUE            shift and go to state 36
    LOGICAL_NOT     shift and go to state 37
    SUB             shift and go to state 33

    expression                     shift and go to state 52

state 18

    (12) function -> DEF NAME LPAREN RPAREN statementc .

    DEF             reduce using rule 12 (function -> DEF NAME LPAREN RPAREN statementc .)
    $end            reduce using rule 12 (function -> DEF NAME LPAREN RPAREN statementc .)
    RPAREN          reduce using rule 12 (function -> DEF NAME LPAREN RPAREN statementc .)


state 19

    (13) function -> DEF NAME LPAREN RPAREN statement .

    DEF             reduce using rule 13 (function -> DEF NAME LPAREN RPAREN statement .)
    $end            reduce using rule 13 (function -> DEF NAME LPAREN RPAREN statement .)
    RPAREN          reduce using rule 13 (function -> DEF NAME LPAREN RPAREN statement .)


state 20
